Flights page complete and responsive

--- a/public/css/views/flights/search.less
+++ b/public/css/views/flights/search.less
@@ -4,6 +4,7 @@
   .grid-row;
   .pad-tb-5;
   .pad-lr-3;
+  .push-down-9;
   grid-template-columns: 1fr 1fr;
   background-color: white;
   border-top: solid 1px @block-border-color;
@@ -12,6 +13,7 @@
 
 .search__label {
   .push-down-1;
+  .main-font-medium;
 
   // Singles - Grid placements
   &--from {
