--- a/public/css/framework/less/vars/colors.less
+++ b/public/css/framework/less/vars/colors.less
@@ -15,6 +15,8 @@
 // Buttons
 @primary-color: #ffc814;
 @secondary-color: #3ecf8e;
+// USE THIS NICE PURPLE
+// background-image: linear-gradient(190deg, #5b05e6 0%, #9606da 100%);
 
 @danger-color: #cc433f;
 
