--- a/public/css/framework/less/vars/colors.less
+++ b/public/css/framework/less/vars/colors.less
@@ -3,6 +3,9 @@
 // Themes
 @background-color1: #f9fbfc;
 @background-color2: #eff4f8;
+@purple-color1: #5b05e6;
+@purple-color2: #9606da;
+@purple-theme: linear-gradient(190deg, @purple-color1 0%, @purple-color2 100%);
 
 // Footer
 @footer-color: #384251;
@@ -13,10 +16,8 @@
 @gray-text-color: #607681;
 
 // Buttons
-@primary-color: #ffc814;
+@primary-color: #5b05e6;
 @secondary-color: #3ecf8e;
-// USE THIS NICE PURPLE
-// background-image: linear-gradient(190deg, #5b05e6 0%, #9606da 100%);
 
 @danger-color: #cc433f;
 
