--- a/public/css/views/flights/flight.less
+++ b/public/css/views/flights/flight.less
@@ -54,7 +54,6 @@
 
     // circle test
     .grid-row;
-    background-color: red;
     height: 50px;
     width: 50px;
     justify-content: center;
@@ -117,7 +116,7 @@
   }
 
   .flight-wrapper {
-    .box-shadow-1;
+    // .box-shadow-1;
     border: solid 1px @block-border-color;
     border-radius: 4px;
     width: max-content;
