--- a/public/css/views/register/style.less
+++ b/public/css/views/register/style.less
@@ -1,14 +1,16 @@
 @import (reference) '../../../css/framework/less/index/index.less';
 // Overwriting Body
 body {
-  background-color: @primary-color;
+  background-image: @purple-theme;
 }
+
 // Overwriting Nav
 .nav {
+  background: none;
   box-shadow: none;
 }
-// Register Page styles
 
+// Register Page styles
 // Clouds
 .cloud {
   position: absolute;
@@ -30,24 +32,11 @@ body {
 // Actual form
 .form-wrapper {
   .grid-row;
-  background-color: white;
-
-  @media @tablet {
-    background: none;
-  }
 }
 
 .form {
-  @media @tablet {
-    .box-shadow-1;
-    .push-down-5;
-    color: @black-text-color;
-    width: 500px;
-    background-color: white;
-    margin-top: 30px;
-    border-radius: 7px;
-    justify-self: center;
-  }
+  .push-down-7;
+  background-color: white;
 }
 
 .form__top {
@@ -108,13 +97,26 @@ body {
   .push-down-10;
   .pad-lr-7;
   .btn(@block-background-color);
-  box-shadow: none;
   color: @black-text-color;
-  border: solid 1px @block-border-color;
+}
 
-  @media @tablet {
-    .btn(@block-background-color);
+//--------------------TABLET---------------------
+@media @tablet {
+  .form-wrapper {
+    background: none;
+  }
+  .form {
+    .box-shadow-1;
+    width: 500px;
     color: @black-text-color;
-    border: none;
+    justify-self: center;
+    background-color: white;
+    border-radius: 7px;
+  }
+  .form__top {
+    border-radius: 7px 7px 0 0;
+  }
+  .form__bottom {
+    border-radius: 0 0 7px 7px;
   }
 }
