Added responsive dropdown navigations

--- a/public/css/views/flights/flight.less
+++ b/public/css/views/flights/flight.less
@@ -25,9 +25,10 @@
     .giga;
   }
   &__button {
-    .btn(@primary-color);
+    .btn(@soft-primary-color);
     .pad-tb-3;
     .pad-lr-5;
+    box-shadow: none;
   }
 }
 
