--- a/public/css/views/home/style.less
+++ b/public/css/views/home/style.less
@@ -4,10 +4,11 @@
   .push-down-0;
   height: max-content;
   box-shadow: none;
+  background: none;
 }
 
 .background {
-  background-color: @primary-color;
+  background-image: @purple-theme;
   height: max-content;
 }
 
