--- a/public/css/views/nav/style.less
+++ b/public/css/views/nav/style.less
@@ -1,5 +1,4 @@
 @import (reference) '../../../css/framework/less/index/index.less';
-
 .nav {
   .push-down-7;
   .box-shadow-1;
@@ -28,6 +27,7 @@
 .flight {
   .secondary-font;
 }
+
 .guys {
   .secondary-font-light;
 }
@@ -38,14 +38,13 @@
   position: relative;
   align-items: center;
 }
+
 .nav__links-item {
   display: none;
-
   &--hamburger,
   &--cart {
     display: inline;
   }
-
   &--hamburger {
     transform: scaleY(1.2);
     &:before {
@@ -55,12 +54,10 @@
       font-size: 31px;
     }
   }
-
   &--cart {
     .btn(@secondary-color);
     .pad-tb-3;
     .pad-lr-5;
-
     &:before {
       .icon-font;
       .push-right-2;
@@ -87,22 +84,28 @@
 
 // Dropdown cart
 .dropdown-cart {
-  .col-cell-1;
+  .col-cell-1; // display: none;
 }
+
 .dropdown__flight-wrapper {
   .grid-column;
   .col-gap-5;
   .pad-tb-3;
   .pad-lr-7;
   .milli;
-  margin-bottom: solid 3px blue;
+  border-bottom: solid 1px #eee;
 }
+
 .dropdown__flight-left {
   .grid-row;
   .row-gap-1;
   grid-template-columns: repeat(4, max-content);
-  grid-template-rows: repeat(2, max-content);
   justify-items: center;
+}
+
+.dropdown__flight-right {
+  .grid-column;
+  align-items: center;
 }
 
 .dropdown__flight {
@@ -117,15 +120,12 @@
     border-radius: 50%;
     background-color: @background-color2;
     color: @black-text-color;
-
     &:before {
       content: '\f3a4';
     }
-
     &--outbound {
       transform: rotate(90deg);
     }
-
     &--inbound {
       transform: rotate(-90deg);
     }
@@ -138,50 +138,67 @@
     .push-right-3;
     .main-font-medium;
   }
-
   &-remove:before {
     color: red;
     content: '\f2d7';
   }
 }
 
-.dropdown__flight-right {
+.dropdown-cart__footer {
   .grid-column;
+  .col-gap-3;
+  .pad-tb-3;
+  .pad-lr-5;
+  border-radius: 0 0 4px 4px;
+  grid-template-columns: 1fr max-content max-content;
+  background-color: @background-color2;
   align-items: center;
+}
+
+.dropdown-cart__checkout {
+  .btn(@secondary-color);
+  .pad-tb-3;
+  .pad-lr-5;
+  width: max-content;
+}
+
+.dropdown-cart__total-price {
+  .main-font-medium;
 }
 
 // Dropdown navigation
 .dropdown-nav {
-  .col-cell-2;
+  // display: none;
+}
 
-  &__header {
-    .grid-column;
-    .pad-5;
-    .col-gap-5;
-    align-items: center;
-    grid-template-columns: 1fr max-content;
-    border-radius: 4px 4px 0 0;
-    background-color: @background-color2;
-  }
-  &__icon {
-    .grid-row;
-    justify-content: center;
-    align-content: center;
-    border-radius: 50%;
-    height: 25px;
-    width: 25px;
-    background-color: @black-text-color;
+.dropdown-nav__header {
+  .grid-column;
+  .pad-5;
+  .col-gap-5;
+  align-items: center;
+  grid-template-columns: 1fr max-content;
+  border-radius: 4px 4px 0 0;
+  background-color: @background-color2;
+}
 
-    &:before {
-      .icon-font;
-      content: '\f2d7';
-      color: white;
-    }
-  }
-  &__heading {
-    .main-font-medium;
-    .push-right-10;
-    .giga;
+.dropdown-nav__heading {
+  .main-font-medium;
+  .push-right-10;
+  .giga;
+}
+
+.dropdown-nav__icon {
+  .grid-row;
+  justify-content: center;
+  align-content: center;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  background-color: @black-text-color;
+  &:before {
+    .icon-font;
+    content: '\f2d7';
+    color: white;
   }
 }
 
@@ -190,7 +207,6 @@
   .pad-tb-4;
   .mega;
   justify-content: center;
-
   &:hover {
     background-color: @background-color2;
   }
@@ -204,5 +220,8 @@
   }
   .nav__links-item {
     display: inline;
+  }
+  .dropdown-cart {
+    .col-cell-4;
   }
 }
