Checkout progress. checkout form created but no payment method

--- a/public/css/views/nav/style.less
+++ b/public/css/views/nav/style.less
@@ -84,7 +84,8 @@
 
 // Dropdown cart
 .dropdown-cart {
-  .col-cell-1; // display: none;
+  .col-cell-1;
+  display: none;
 }
 
 .dropdown__flight-wrapper {
@@ -133,9 +134,15 @@
   &-date {
     .push-right-3;
   }
+  &-location--from {
+    justify-self: end;
+  }
+  &-location--to {
+    justify-self: start;
+  }
   &-location,
   &-price {
-    .push-right-3;
+    .push-right-4;
     .main-font-medium;
   }
   &-remove:before {
@@ -168,7 +175,7 @@
 
 // Dropdown navigation
 .dropdown-nav {
-  // display: none;
+  display: none;
 }
 
 .dropdown-nav__header {
