--- a/public/css/views/checkout/style.less
+++ b/public/css/views/checkout/style.less
@@ -1,4 +1,9 @@
 @import (reference) '../../../css/framework/less/index/index.less';
+// Overwriting wrapper style
+.wrapper {
+  padding-bottom: 0;
+}
+
 // Checkout Page styles
 .nav {
   margin-bottom: 0;
@@ -9,7 +14,8 @@
 }
 
 .form__header {
-  .pad-5;
+  .pad-tb-7;
+  .pad-lr-5;
   border-bottom: solid 1px @block-border-color;
 }
 
@@ -19,7 +25,7 @@
 }
 
 .form__footer {
-  .pad-5;
+  .pad-tb-7;
   .grid-row;
 }
 
@@ -70,6 +76,9 @@
   &--2:before {
     content: '2';
   }
+  &--3:before {
+    content: '3';
+  }
 }
 
 .section__row {
@@ -115,9 +124,15 @@
   }
 
   // Checkout Page styles
+  .wrapper {
+    .grid-row;
+    justify-items: center;
+  }
+
   .checkout-form {
-    border-radius: 5px;
     .box-shadow-6;
+    border-radius: 5px;
+    max-width: 900px;
   }
   .sections-wrapper {
     .grid-row;
