Changed icons from png to svg

--- a/public/css/views/nav/cart/style.less
+++ b/public/css/views/nav/cart/style.less
@@ -90,8 +90,9 @@
 
 .dropdown-cart__checkout {
   .btn(@secondary-color);
-  .pad-tb-3;
+  .pad-tb-2;
   .pad-lr-5;
+  .milli;
   width: max-content;
 }
 
