--- a/public/css/views/login/style.less
+++ b/public/css/views/login/style.less
@@ -15,8 +15,9 @@ body {
   position: absolute;
   z-index: -1;
   &-1 {
-    top: 10%;
+    top: 15%;
     right: 20%;
+    width: 150px;
     opacity: 0.95;
   }
   &-2 {
@@ -43,7 +44,7 @@ body {
 .form__bottom {
   .grid-row;
   .pad-tb-7;
-  .pad-lr-10;
+  .pad-lr-5;
   background-color: white;
 }
 
@@ -126,6 +127,7 @@ body {
   }
 
   .form__bottom {
+    .pad-lr-7;
     border-radius: 0 0 7px 7px;
   }
 }
