--- a/public/css/views/nav/main/style.less
+++ b/public/css/views/nav/main/style.less
@@ -79,12 +79,17 @@
     color: white;
     border-radius: 4px;
     border: solid 2px white;
+
+    &:hover {
+      background: white;
+      color: @black-text-color;
+    }
   }
 }
 
 // Dropdown cart
 .dropdown-cart-wrapper {
-  // display: none;
+  display: none;
 }
 
 // Dropdown navigation
