--- a/public/css/views/register/style.less
+++ b/public/css/views/register/style.less
@@ -17,8 +17,9 @@ body {
   z-index: -1;
 
   &-1 {
-    top: 10%;
+    top: 15%;
     right: 20%;
+    width: 150px;
     opacity: 0.95;
   }
   &-2 {
@@ -49,7 +50,7 @@ body {
 .form__bottom {
   .grid-row;
   .pad-tb-7;
-  .pad-lr-10;
+  .pad-lr-5;
   border-radius: 0 0 7px 7px;
 }
 
@@ -117,6 +118,7 @@ body {
     border-radius: 7px 7px 0 0;
   }
   .form__bottom {
+    .pad-lr-7;
     border-radius: 0 0 7px 7px;
   }
 }
