Refacted remaining pages. Split into smaller, manageable files

--- a/public/css/views/flights/flight/style.less
+++ b/public/css/views/flights/flight/style.less
@@ -1,4 +1,5 @@
-@import (reference) '../../../css/framework/less/index/index.less';
+@import (reference) '../../../../css/framework/less/index/index.less';
+
 .flight-wrapper {
   border-top: solid 1px @block-border-color;
   background-color: white;
