--- a/public/css/views/flights/main/style.less
+++ b/public/css/views/flights/main/style.less
@@ -1,7 +1,5 @@
-@import (reference) '../../../css/framework/less/index/index.less';
-// Components
-@import './search.less';
-@import './flight.less';
+@import (reference) '../../../../css/framework/less/index/index.less';
+
 .wrapper {
   &-custom {
     max-width: 1200px;
