--- a/public/css/views/flights/search/style.less
+++ b/public/css/views/flights/search/style.less
@@ -1,4 +1,4 @@
-@import (reference) '../../../css/framework/less/index/index.less';
+@import (reference) '../../../../css/framework/less/index/index.less';
 
 .search-wrapper {
   .grid-row;
