--- a/public/css/views/checkout/style.less
+++ b/public/css/views/checkout/style.less
@@ -1,14 +1,13 @@
 @import (reference) '../../../css/framework/less/index/index.less';
-// Overwriting wrapper style
+// Overwriting style
 .wrapper {
   padding-bottom: 0;
 }
-
-// Checkout Page styles
 .nav {
   margin-bottom: 0;
 }
 
+// Checkout styles
 .checkout-form {
   background-color: white;
 }
