--- a/public/css/views/nav/cart/style.less
+++ b/public/css/views/nav/cart/style.less
@@ -1,7 +1,8 @@
 @import (reference) '../../../../css/framework/less/index/index.less';
 
 .dropdown-cart {
-  .grid-row;
+  display: none;
+
   .box-shadow-2;
   .bounce-out-animation;
   z-index: 1;
