--- a/public/css/views/nav/mobile-nav/style.less
+++ b/public/css/views/nav/mobile-nav/style.less
@@ -1,6 +1,7 @@
 @import (reference) '../../../../css/framework/less/index/index.less';
 .dropdown-nav {
-  .grid-row;
+  // display: none;
+
   .box-shadow-2;
   .bounce-out-animation;
   z-index: 1;
