--- a/public/css/views/nav/main/style.less
+++ b/public/css/views/nav/main/style.less
@@ -42,6 +42,7 @@
 
 .nav__links-item {
   display: none;
+  color: white;
 
   &--hamburger {
     display: inline;
@@ -60,6 +61,7 @@
     .btn(@secondary-color);
     .pad-tb-3;
     .pad-lr-5;
+    .kilo;
     &:before {
       .icon-font;
       .push-right-2;
