--- a/public/css/views/nav/mobile-nav/style.less
+++ b/public/css/views/nav/mobile-nav/style.less
@@ -1,9 +1,8 @@
 @import (reference) '../../../../css/framework/less/index/index.less';
 .dropdown-nav {
-  // display: none;
+  display: none;
 
   .box-shadow-2;
-  .bounce-out-animation;
   z-index: 1;
   border-radius: 4px;
   position: absolute;
