Testing SESSIONS with header

--- a/public/css/framework/less/vars/colors.less
+++ b/public/css/framework/less/vars/colors.less
@@ -20,7 +20,7 @@
 @soft-primary-color: #7a37e6;
 @secondary-color: #3ecf8e;
 
-@danger-color: #cc433f;
+@danger-color: rgba(231, 10, 10, 0.651);
 
 // General
 @disabled-color: #abb2b5;
