--- a/public/css/views/nav/cart/style.less
+++ b/public/css/views/nav/cart/style.less
@@ -1,7 +1,7 @@
 @import (reference) '../../../../css/framework/less/index/index.less';
 
 .dropdown-cart {
-  // display: none;
+  display: none;
 
   .box-shadow-2;
   z-index: 1;
