--- a/public/css/views/nav/cart/style.less
+++ b/public/css/views/nav/cart/style.less
@@ -14,6 +14,12 @@
   color: @black-text-color;
 }
 
+.dropdown__all-flights {
+  max-height: 300px;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
 .dropdown__flight-wrapper {
   .grid-column;
   .col-gap-5;
