Refactored, adding more modules

--- a/public/css/main/main.less
+++ b/public/css/main/main.less
@@ -10,6 +10,10 @@ body {
   padding-bottom: 50px;
 }
 
+.error-input {
+  border: solid 1px @danger-color;
+}
+
 input:focus {
   color: #495057;
   background-color: #fff;
