Added further validation options and checkout page now validates on server

--- a/public/css/views/checkout/style.less
+++ b/public/css/views/checkout/style.less
@@ -101,6 +101,10 @@
   }
 }
 
+.error {
+  .span-col-1-13;
+}
+
 // --------------------TABLET---------------------
 @media @tablet {
   .section__input {
