--- a/public/css/main/main.less
+++ b/public/css/main/main.less
@@ -10,7 +10,10 @@ body {
   .container;
   padding-bottom: 50px;
 }
-
+.error {
+  .milli;
+  color: @danger-color;
+}
 .error-input {
   border: solid 1px @danger-color;
 }
